src/tests/snapshots/cargo_vet__tests__regenerate_unaudited__builtin-simple-unaudited-twins-regenerate.snap
---
source: src/tests/regenerate_unaudited.rs
expression: unaudited
---
[[third-core]]
version = "10.0.0"
criteria = "safe-to-deploy"

[[third-core]]
version = "5.0.0"
criteria = "safe-to-deploy"

