src/tests/snapshots/cargo_vet__tests__regenerate_unaudited__builtin_complex_exemptions_preferred_path_fresh.snap
---
source: src/tests/regenerate_unaudited.rs
expression: exemptions
---
[[third-core]]
version = "5.0.0"
criteria = "safe-to-deploy"

[[thirdA]]
version = "10.0.0"
criteria = "safe-to-deploy"

[[thirdAB]]
version = "10.0.0"
criteria = "safe-to-deploy"

